--- a/spread-your-message.html
+++ b/spread-your-message.html
@@ -18,7 +18,7 @@
             </p>
             <p>
                 You might say.. &quot;well Timon, then create something the people want!&quot;. I've been open about my ideas and products to everyone
-                who asked (and some who didn't, heh). People liked the ideas, wanted to keep them in the loop and wanted to be the first beta testers, so this wasn't really a problem.
+                who asked (and some who didn't, heh). People liked the ideas, wanted me to keep them in the loop and wanted to be the first beta testers, so this wasn't really a problem.
                 So why was I still not motivated? Why couldn't I get rid of this aching feeling in my stomach?
                 I realized I could just do this, probably make money, hopefully enough to live on. Improve my products, keep marketing them, and improve my own standards of living that way.
                 However, I don't really need to improve my own standards of living. I am priviliged to live in a lovely country, in a nice house etc. So, what would be the point in getting more money?
